--- a/component/styles/reply.css
+++ b/component/styles/reply.css
@@ -1,15 +1,17 @@
-/* style usr response options */
-.bubble.accepts-two {
+/* style usr response reply */
+.bubble.reply {
 	padding: 10px 0 15px 0;
 	background: transparent;
 	float: right;
 	position: relative;
 	transform-origin: right top;
+	padding: 0;
+	margin: 0;
 }
-.bubble.accepts-two .bubble-content {
+.bubble.reply .bubble-content {
 	transition: all 300ms;
 }
-.bubble.accepts-two .bubble-content .bubble-button {
+.bubble.reply .bubble-content .bubble-button {
 	background: rgba(44, 44, 44, 0.67);
 	color: #fff;
 	padding: 9px 16px;
@@ -19,34 +21,35 @@
 	transition: all 300ms;
 	text-decoration: none;
 	animation-duration: 1s;
-	animation-name: bubbleButton;
+	animation-name: animate-reply;
 	animation-play-state: paused;
 	animation-fill-mode: forwards;
 	opacity: 0;
 }
-@keyframes bubbleButton {
+@keyframes animate-reply {
     from { opacity: 0 }
     to { opacity: 1 }
 }
-.bubble.accepts-two.say .bubble-content .bubble-button {
+.bubble.reply.say .bubble-content .bubble-button {
 	animation-play-state: running;
+	margin-top: 5px;
 }
 
-.bubble.accepts-two .bubble-content .bubble-button:first-child {
+.bubble.reply .bubble-content .bubble-button:first-child {
 	border-radius: 15px 15px 5px 15px;
 }
-.bubble.accepts-two .bubble-content .bubble-button:last-child {
+.bubble.reply .bubble-content .bubble-button:last-child {
 	border-radius: 15px 15px 15px 5px;
 	margin-left: 2px;
 }
-.bubble.accepts-two:not(.answered) .bubble-content .bubble-button:hover {
+.bubble.reply:not(.answered) .bubble-content .bubble-button:hover {
 	background: rgba(44, 44, 44, 1);
 }
-.bubble.accepts-two.answered .bubble-content .bubble-button {
+.bubble.reply.answered .bubble-content .bubble-button {
 	opacity: .5;
 	cursor: default;
 }
-.bubble.accepts-two .bubble-content .bubble-button.selected {
+.bubble.reply .bubble-content .bubble-button.selected {
 	background: #2c2c2c;
 	background: linear-gradient(166deg, #48121d, #0d4058 100%);
 	opacity: 1;
