--- a/component/styles/says.css
+++ b/component/styles/says.css
@@ -3,15 +3,15 @@
 .bubble, .bubble-typing {
 	color: #212121;
 	background: rgba(255, 255, 255, 0.84);
-	padding: 9px 16px;
-	border-radius: 15px;
+	padding: 4px 16px;
+	border-radius: 5px 15px 15px 15px;
 	font-weight: 400;
 	text-transform: none;
 	text-align: left;
 	font-size: 16px;
 	letter-spacing: .5px;
-	margin: 2px;
-	max-width: calc(100% - 38px);
+	margin: 0 0 2px 0;
+	max-width: 65%;
 	float: none;
 	clear: both;
 	line-height: 1.5em;
