--- a/component/test/hipster-ipsum.html
+++ b/component/test/hipster-ipsum.html
@@ -8,18 +8,11 @@
 	
 	
 	<!-- stylesheets for bubbles -->
+	<link rel="stylesheet" media="all" href="../styles/setup.css">
 	<link rel="stylesheet" media="all" href="../styles/says.css">
 	<link rel="stylesheet" media="all" href="../styles/reply.css">
 	<link rel="stylesheet" media="all" href="../styles/typing.css">
 	<style>
-		#chat {
-			background: #eee;
-			height: 400px;
-			max-width: 750px;
-			width: calc(100% - 2em);
-			margin: 0 auto;
-			overflow: scroll;
-		}
 		h1 { text-align: center; }
 	</style>
 	
