--- a/component/styles/setup.css
+++ b/component/styles/setup.css
@@ -1,8 +1,7 @@
 /* setup container styles */
 .bubble-container {
-	background: linear-gradient(145deg, #ce0564, #1faced);
+	background: linear-gradient(145deg, rgb(227, 232, 239), rgb(244, 248, 251));
 	padding: 10px;
-	border-radius: 3px;
 	height: 400px;
 	max-width: 750px;
 	width: calc(100% - 2em);
