--- a/component/styles/reply.css
+++ b/component/styles/reply.css
@@ -1,15 +1,15 @@
 /* style usr response reply */
 .bubble.reply {
-	padding: 10px 0 15px 0;
 	background: transparent;
 	box-shadow: none;
 	float: right;
 	position: relative;
 	transform-origin: right top;
+  margin: 8px 0 10px;
 	padding: 0;
+	max-width: 100%;
 }
 .bubble.reply.say {
-  margin: 8px 0 10px;
 /* 
   min-width: 350px;
  */
@@ -63,12 +63,8 @@
 	transform: scale(1);
   padding: 8px 16px;
 }
-.bubble.reply .bubble-content .bubble-button.selected {
-	background: #2c2c2c;
-	background: linear-gradient(166deg, #48121d, #0d4058 100%);
-	opacity: 1;
-}
 
+/* input fields for bubbles */
 .bubble .bubble-content input {
 	background: linear-gradient(193deg, #1faced, #5592dc 100%) !important;
 	box-shadow: 0 0px 1px 0px #000, 0 -1px 0 0px rgba(255, 255, 255, 0.38) inset;
