--- a/component/styles/says.css
+++ b/component/styles/says.css
@@ -16,7 +16,7 @@
 	clear: both;
 	line-height: 1.5em;
 	transform-origin: left top;
-	transition: all 350ms;
+	transition: all 200ms;
 }
 .bubble .bubble-content {
 	transition: opacity 150ms;
@@ -24,14 +24,14 @@
 .bubble:not(.say) .bubble-content {
 	opacity: 0;
 }
-.bubble-typing.imagine,
-.bubble.imagine {
-	visibility: hidden;
+.bubble-typing.imagine, .bubble.imagine {
 	transform: scale(0);
+	transition: all 200ms, height 200ms 1s, padding 200ms 1s;
+}
+.bubble.imagine {
 	margin: 0;
 	height: 0;
 	padding: 0;
-	transition: all 350ms, height 350ms 1s, padding 350ms 1s;
 }
 
 /* style media that's inside bubbles */
