--- a/component/start-here/hello.html
+++ b/component/start-here/hello.html
@@ -174,7 +174,6 @@
 					"OK, so what you do is replace <strong>JSON</strong> with this:",
 					"{ \"ice\": { \"says\": [ \"Hi\" ] } }",
 					"That's really all that you need to get started!",
-					"
 				],
 				"reply": [
 					{
@@ -234,7 +233,7 @@
 			"chapter-eight": {
 				"says":
 				[
-					"<strong>1.</strong> <a href=https://github.com/dmitrizzle/Moo.ChatBubble/archive/master.zip>Download this file</a> and unzip it it.",
+					"<strong>1.</strong> <a href=https://github.com/dmitrizzle/chat-bubble/archive/master.zip>Download this file</a> and unzip it it.",
 					"<strong>2.</strong> Move the file you've created inside <strong>component</strong> folder.",
 					"<strong>3.</strong> Add the following lines to the top of your file:"
 				],
@@ -266,9 +265,9 @@
 			"chapter-nine-help": {
 				"says":
 				[
-					"Double-check your spelling, and punctuation in the file. Make sure you <a href=https://github.com/dmitrizzle/Moo.ChatBubble/archive/master.zip>donloaded this file</a> and unzipped it. Your file needs to be INSIDE of that <strong>component</strong> folder.",
+					"Double-check your spelling, and punctuation in the file. Make sure you <a href=https://github.com/dmitrizzle/chat-bubble/archive/master.zip>donloaded this file</a> and unzipped it. Your file needs to be INSIDE of that <strong>component</strong> folder.",
 					"If that still doesn't work, open example-help.html with your text document (inside of the <strong>component</strong> folder) and compare it to your work.",
-					"You can open <a href=../example-help.html>example-help.html</a> in your browser and see how it's supposed to work."
+					"You can open <a href=../example-help.html target=blank>example-help.html</a> in your browser and see how it's supposed to work."
 				],
 				"reply": [
 					{
