added "px" to all values to avoid implementation issues on archie.ai

--- a/component/start-here/hello.html
+++ b/component/start-here/hello.html
@@ -322,7 +322,7 @@
 	
 	<!-- initialize bubbles -->
 	<script>
-		var givemeBubbles = new Bubbles(document.getElementById('chat'), "givemeBubbles");
+		var givemeBubbles = new Bubbles(document.getElementById("chat"), "givemeBubbles");
 		givemeBubbles.talk(convo);
 		functionOne = function(){ alert("Function One"); }
 		functionTwo = function(){ alert("Function Two"); }
