center button text

--- a/component/styles/reply.css
+++ b/component/styles/reply.css
@@ -23,6 +23,7 @@
 	padding: 8px 16px;
 	border-radius: 15px 15px 5px 5px;
 	margin-left: 2px;
+	text-align: center;
 	display: inline-block;
   float: right;
 	cursor: pointer;
