replaced eval() with window[]

--- a/component/start-here/hello.html
+++ b/component/start-here/hello.html
@@ -41,7 +41,7 @@
 				"reply": [
 					{
 						"question": "👍",
-						"answer" : "start"
+						"answer" : "functionTwo"
 					},
 					{
 						"question": "What for? 🤔",
