Added textfield element

--- a/component/start-here/hello.html
+++ b/component/start-here/hello.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" media="all" href="../styles/says.css">
 	<link rel="stylesheet" media="all" href="../styles/reply.css">
 	<link rel="stylesheet" media="all" href="../styles/typing.css">
+	<link rel="stylesheet" media="all" href="../styles/input.css">
 	<style>
 		h1 { text-align: center; }
 	</style>
