--- a/component/start-here/hello.html
+++ b/component/start-here/hello.html
@@ -324,27 +324,18 @@
 	<!-- initialize bubbles -->
 	<script>
 		var givemeBubbles = new Bubbles(document.getElementById("chat"), "givemeBubbles", {
-// 			inputCallbackFn: function(o){
-// 				console.log(1);
-// 				givemeBubbles.talk({
-// 					"ice": {
-// 						"says":
-// 						[
-// 							"WTF are you talking about?",
-// 						],
-// 						// "reply": [
-// // 							{
-// // 								"question": "👍",
-// // 								"answer" : "start"
-// // 							},
-// // 						]
-// 						"reply" : {
-// 							"question": o.standingAnswer,
-// 							"answer" : "start"
-// 						}
-// 					},
-// 				})
-// 			}
+			inputCallbackFn: function(o){
+				//console.log(o.convo[o.standingAnswer].reply);
+				givemeBubbles.talk({
+					"ice": {
+						"says":
+						[
+							"WTF are you talking about?",
+						],
+						"reply" : o.convo[o.standingAnswer].reply
+					},
+				})
+			}
 		});
 		givemeBubbles.talk(convo);
 		functionOne = function(){ alert("Function One"); }
