--- a/component/start-here/hello.html
+++ b/component/start-here/hello.html
@@ -325,16 +325,39 @@
 	<script>
 		var givemeBubbles = new Bubbles(document.getElementById("chat"), "givemeBubbles", {
 			inputCallbackFn: function(o){
-				//console.log(o.convo[o.standingAnswer].reply);
-				givemeBubbles.talk({
-					"ice": {
-						"says":
-						[
-							"WTF are you talking about?",
-						],
-						"reply" : o.convo[o.standingAnswer].reply
-					},
-				})
+			
+				console.log(o);
+				
+				// do this if no answer matched
+				var miss = function(){
+					givemeBubbles.talk({
+						"ice": {
+							"says":
+							[
+								"WTF are you talking about?",
+							],
+							"reply" : o.convo[o.standingAnswer].reply
+						},
+					})
+				}
+				
+				// do this if answer found
+				var match = function(key){
+					console.log(key);
+					givemeBubbles.talk(convo, key); // restart current convo from point found in the answer
+				}
+				
+				// sanitize text for search function
+				var strip = function(text){
+					return text.toLowerCase().replace(/\ [.,\/#!$%\^&\*;:{}=\-_`~()]/g,"");
+				}
+				
+				// search function
+				o.convo[o.standingAnswer].reply.forEach(function(e, i) {
+					(strip(e.question).includes(strip(o.input)) && o.input.length > 0) ? found = e.answer : found = false;
+				});
+				found ? match(found) : miss();
+				
 			}
 		});
 		givemeBubbles.talk(convo);
