--- a/component/examples/0-tutor.html
+++ b/component/examples/0-tutor.html
@@ -22,7 +22,7 @@
 	
 	
 	
-</head><body><h1>Hello!</h1>
+</head><body><h1>Start Here.</h1>
 	
 
 	
@@ -41,7 +41,7 @@
 				],
 				"reply": [
 					{
-						"question": "👍",
+						"question": "Go! 👍",
 						"answer" : "start"
 					},
 					{
@@ -54,9 +54,7 @@
 				"says":
 				[
 					"Because it's fun, of course!",
-					"...AAAAnd, unlike other tools out there, here you'll learn a little bit of code.",
-					"You'll be hacking in no-time!",
-					"<img src=images/eliot.jpg>",
+					"<img src=images/tutor-eliot.jpg>",
 				],
 				"reply": [
 					{
@@ -103,28 +101,10 @@
 				[
 					"Cool,",
 					"If you are new to programming, don't worry. You won't need to actually do anything complicated. 😅",
-					"But you do need to pay attention to details. Things like quotations, commas, curly and square brackets need to be checked and double-checked.",
-					"Computers are finicky things and they like everything to be perfect."
 				],
 				"reply": [
 					{
-						"question": "Sounds hard! 😰",
-						"answer" : "chapter-one-hard"
-					},
-					{
-						"question": "Got it, next! 😁",
-						"answer" : "chapter-two"
-					},
-				]
-			},
-			"chapter-one-hard": {
-				"says":
-				[
-					"I'm sure you can do it! It really isn't that difficult. Persevere, human! 💪"
-				],
-				"reply": [
-					{
-						"question": "Alright, let's do it! 🙂",
+						"question": "OK, cool! 😁",
 						"answer" : "chapter-two"
 					},
 				]
@@ -133,7 +113,7 @@
 				"says":
 				[
 					"To understand what to say I read scripts written in JSON format. It looks like something like this:",
-					"<img src=images/json.jpg>",
+					"<img src=images/tutor-json.jpg>",
 					"You can have a look yourself at the code if you open this file (hello.html) in a text editor. Any editor will do, but it can't be a rich-text editor like Microsoft Word. If you're on Windows, TextPad will do. On Mac, TextEdit is good (make sure rich text is disabled). 🗒"
 				],
 				"reply": [
@@ -188,7 +168,7 @@
 				[
 					"Youp!",
 					"Here's how a simple example would look like:",
-					"<img src=images/example-1.jpg>",
+					"<img src=images/tutor-install.jpg>",
 					"Why don't you give this a try? Create a text file and copy there everything from above and save as example.html",
 					"Then open that file with your browser"
 				],
