Further simplified the tutorial

--- a/component/examples/0-tutor.html
+++ b/component/examples/0-tutor.html
@@ -50,7 +50,7 @@
 				"reply": [
 					{
 						"question": "Go! 👍",
-						"answer" : "start"
+						"answer" : "chapter-one"
 					},
 					{
 						"question": "What for? 🤔",
@@ -67,39 +67,6 @@
 				"reply": [
 					{
 						"question": "Go on...😏",
-						"answer" : "start"
-					},
-				]
-			},
-			"start": {
-				"says":
-				[
-					"OK check this. Some of us bots are quite smart, but out of the box, when we are baby material (that's what you'll be getting). We aren't that clever. 🐥",
-					"You need to teach your bot to say just the right thing to the people who chat with it...",
-					"...Him/her... whatever. Anyways,",
-					"Basically you just write a script for the bot, and everything plays out from there. 🎭"
-				],
-				"reply": [
-					{
-						"question": "Got it, next! 👌",
-						"answer" : "chapter-one"
-					},
-					{
-						"question": "Can't you learn on your own?",
-						"answer" : "ai-style"
-					},
-				]
-			},
-			"ai-style": {
-				"says":
-				[
-					"Not really, no.",
-					"Basically I'm a very simple script written for the browser to interpret your written words as beautiful bubbles in anticipation of user input.",
-					"Even the most powerful AI machines of today still need to be taught. Maybe you should be thankful for that, human! 😈"
-				],
-				"reply": [
-					{
-						"question": "O...K... 😧",
 						"answer" : "chapter-one"
 					},
 				]
@@ -177,28 +144,14 @@
 			"chapter-six": {
 				"says":
 				[
-					"You can add keyboard input (with custom language processing) and custom functions for user answers.",
-					"You can also dynamically replace working conversation JSON by simply calling the launch command with new data.",
-					"@dmitrizzle is working on making integration a little more elegant and adding more flexibility in how this tool accepts and processes answers 🤖",
+					"🎹 You can add keyboard input (with custom language processing) and custom functions for user answers.",
+					"📡 You can also dynamically replace working conversation JSON by simply calling the launch command with new data.",
+					"@<a href=\"https://github.com/dmitrizzle\">dmitrizzle</a> is working on making integration a little more elegant and adding more flexibility in how this tool accepts and processes answers 🤖",
 					"And of course you can customize CSS styles when you install this thing 👨‍🎨"
 				],
 				"reply": [
 					{
 						"question": "Is that it?",
-						"answer" : "chapter-seven"
-					},
-				]
-			},
-			"chapter-seven": {
-				"says":
-				[
-					"Now, if you open this file with your browser... it won't work. 😧",
-					"That's because you'll need to set up the actual tool to download the scripts that make the magic happen.",
-					"Here's how you do it..."
-				],
-				"reply": [
-					{
-						"question": "How?",
 						"answer" : "chapter-eight"
 					},
 				]
