Fixes and shorten the guide

--- a/component/examples/0-tutor.html
+++ b/component/examples/0-tutor.html
@@ -166,7 +166,7 @@
 				"reply": [
 					{
 						"question": "Start over ☝️",
-						"answer" : "chapter-eight"
+						"answer" : "ice"
 					},
 				]
 			}
